# tree-racing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  perf.md
.github/workflows/: dry-run.yml
bench/: car_eval.cpp
src/: csv.h  dataset.hpp  main.cpp  node.hpp  tree.hpp
tst/: car_eval.cpp  tennis.cpp  test_basic.cpp
